force-app/main/default/objects/Portal_Giving_URL_Setting_Field__mdt/Portal_Giving_URL_Setting_Field__mdt.object-meta.xml
<CustomObject>
    <label>Portal Giving URL Setting Field</label>
    <pluralLabel>Portal Giving URL Setting Fields</pluralLabel>
</CustomObject>