force-app/main/default/objects/Portal_Giving_URL_Setting_Field__mdt/fields/Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_API_Name__c</fullName>
    <description>Field API Name to grab the value from to include in as the URL parameter value within the URL.</description>
    <label>Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>