force-app/main/default/objects/Portal_Giving_URL_Setting_Field__mdt/fields/Portal_Giving_URL_Setting__c.field-meta.xml
<CustomField>
    <fullName>Portal_Giving_URL_Setting__c</fullName>
    <label>Portal Giving URL Setting</label>
    <referenceTo>Portal_Giving_URL_Setting__mdt</referenceTo>
    <relationshipLabel>Portal Giving URL Setting Fields</relationshipLabel>
    <relationshipName>Portal_Giving_URL_Setting_Fields</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>