force-app/main/default/objects/Portal_Giving_URL_Setting_Field__mdt/fields/Query_Filter__c.field-meta.xml
<CustomField>
    <fullName>Query_Filter__c</fullName>
    <defaultValue>&apos;All&apos;</defaultValue>
    <label>Query Filter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>