force-app/main/default/objects/Portal_Giving_URL_Setting_Field__mdt/fields/SObject_API_Name__c.field-meta.xml
<CustomField>
    <fullName>SObject_API_Name__c</fullName>
    <description>SObject API Name to query the fields from.</description>
    <label>SObject API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>