force-app/main/default/objects/Portal_Giving_URL_Setting_Field__mdt/fields/Static_Field_Value__c.field-meta.xml
<CustomField>
    <fullName>Static_Field_Value__c</fullName>
    <description>Used to populated the URL Parameter value with a static value.</description>
    <label>Static Field Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>