force-app/main/default/objects/Portal_Giving_URL_Setting_Field__mdt/fields/URL_parameter_Name__c.field-meta.xml
<CustomField>
    <fullName>URL_parameter_Name__c</fullName>
    <description>Name of the URL parameter to use in the URL.</description>
    <label>URL parameter Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>